// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Typeahead should first show synchronous matches while waiting for async calls to finish 1`] = `
<div
  className="Typeahead"
>
  <div
    className="List open"
  >
    <ActionList
      actions={
        Array [
          Object {
            "className": "",
            "content": <TypeaheadItem
              helpText="Sending Domain"
              value="cross"
            />,
            "highlighted": true,
          },
          Object {
            "className": "",
            "content": <TypeaheadItem
              helpText="Template"
              value="crossing"
            />,
            "highlighted": false,
          },
        ]
      }
      groupByKey="section"
      maxHeight={300}
    />
  </div>
  <TextField
    resize="both"
    suffix={
      <MatchesLoading
        isLoading={true}
      />
    }
    type="text"
  />
</div>
`;

exports[`Component: Typeahead should not make any api requests nor have any matches with a pattern <2 characters 1`] = `
<div
  className="Typeahead"
>
  <div
    className="List"
  >
    <ActionList
      actions={Array []}
      groupByKey="section"
      maxHeight={300}
    />
  </div>
  <TextField
    resize="both"
    suffix={
      <MatchesLoading
        isLoading={false}
      />
    }
    type="text"
  />
</div>
`;

exports[`Component: Typeahead should render ok by default 1`] = `
<Downshift
  defaultHighlightedIndex={null}
  defaultIsOpen={false}
  environment={[Window]}
  getA11yStatusMessage={[Function]}
  itemToString={[Function]}
  onChange={[Function]}
  onInputValueChange={[Function]}
  onOuterClick={[Function]}
  onSelect={[Function]}
  onStateChange={[Function]}
  onUserAction={[Function]}
  scrollIntoView={[Function]}
  selectedItemChanged={[Function]}
  stateReducer={[Function]}
  suppressRefError={false}
>
  <Component />
</Downshift>
`;

exports[`Component: Typeahead should show sync and async matches 1`] = `
<div
  className="Typeahead"
>
  <div
    className="List open"
  >
    <ActionList
      actions={
        Array [
          Object {
            "className": "",
            "content": <TypeaheadItem
              helpText="Sending Domain"
              value="cross"
            />,
            "highlighted": true,
          },
          Object {
            "className": "",
            "content": <TypeaheadItem
              helpText="Recipient Domain"
              value="cross.example.com"
            />,
            "highlighted": false,
          },
          Object {
            "className": "",
            "content": <TypeaheadItem
              helpText="Template"
              value="crossing"
            />,
            "highlighted": false,
          },
        ]
      }
      groupByKey="section"
      maxHeight={300}
    />
  </div>
  <TextField
    resize="both"
    suffix={
      <MatchesLoading
        isLoading={false}
      />
    }
    type="text"
  />
</div>
`;
